
The features new in a given release are generally listed under the section for the "b1" release
of that version.

For more details, three sources are available according to type:
 - [ n ], please see old bug tracker at https://bugs.jython.org.
 - [ GH-n ], please see https://github.com/jython/jython.
 - [ FM-n ], please see https://github.com/jython/frozen-mirror.


Jython 2.7.3a1
  Bugs fixed
    - [ GH-183 ] Console messages do not reach root logger (bjo 2896)
    - [ GH-178 ] Update icu4j JAR to 71.1
    - [ GH-177 ] Update Ant to 1.10.12 (Gradle build) (CVE-2020-1945, 2021-36374)
    - [ GH-160 ] Improve context of "Cannot create PyString with non-byte value"
    - [ GH-158 ] Upgrade Bouncy Castle to 1.71
    - [ GH-157 ] Upgrade ASM to 9.3
    - [ GH-156 ] Replace custom SHA224 digest with Java's
    - [ GH-151 ] Upgrade Apache Xerces to 2.12.2 (CVE-2022-23437)
    - [ GH-150 ] Upgrade Netty to 4.1.73 (various CVEs)
    - [ GH-138 ] Upgrade Guava to 31.0.1 (CVE-2020-8908)
    - [ GH-139 ] Make gradlew executable on Unix/Mac
    - [ GH-136 ] Use full path of cmd.exe (CVE-2019-17664)
    - [ GH-129 ] Only attempt to open source/bytecode if readable (GH-93)
    - [ GH-128 ] Support PYTHONDONTWRITEBYTECODE environment variable
    - [ GH-125 ] Launch fails on Mac OS Big Sur (MacOS 11) (GH-172)
    - [ GH-119 ] array.array itemsize and serialisation anomalies for unsigned types
    - [ GH-122 ] Upgrade Apache commons-compress to 1.21
    - [ GH-105 ] from java.util import * (etc.) not working in JDK 14+ (bjo 2792)
    - [ GH-102 ] Fix CRC32.update calls in zlib.py
    - [ GH-101 ] Improve boxing of arguments to vararg methods
    - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
    - [ GH-97 ] Failures in SNI support affecting pip
    - [ GH-93 ] Permissions problems with compiled source files ($py.class)
    - [ GH-77 ] Broken AST adapter
    - [ GH-74 ] Clarify license position in relation to zxJDBC.
    - [ GH-57 ] JavaWebStart compatibility broken